@startuml "Entity Relationship Diagram"
title Entity Relationship Diagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *email : text <<unique>>
  name : text
  phoneNumber : text
  telegram: text
  instagram: text
  *role: text
}

entity "Course" as course {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *authorId : uuid <<FK>>
  *slug: text <<unique>>
  *name: text
  *description: text
  *price: number
  *image: text
  *category: text
}

entity "Content" as content {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *authorId : uuid <<FK>>
  *courseId: uuid <<FK>>
  *slug: text
  *name: text
  *description: text
  *type: text
  *content: text
}

entity "Consumption" as consumption {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *userId : uuid <<FK>>
  *contentId: uuid <<FK>>
  *courseId: uuid <<FK>> <<denormalized>>
  *progress: number
  *status: text
}

entity "Subscription" as subscription {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *userId : uuid <<FK>>
  *courseId: uuid <<FK>>
  *authorId : uuid <<FK>> <<denormalized>>
  status : text
}

entity "Transaction" as transaction {
  *id : uuid <<generated>>
  --
  *createdAt: DateTime <<generated>>
  *updatedAt: DateTime <<generated>>
  *userId : uuid <<FK>>
  *courseId : uuid <<FK>>
  *authorId : uuid <<FK>> <<denormalized>>
  *bankName: text
  *bankAccountNumber: text
  *bankAccountName: text
  *amount: number
  *datetime: datetime
  *method: text
  *status : text
}

user ||..o{ course
user ||..o{ transaction
user }|.-o{ subscription
user ||..o{ consumption
course ||..o{ transaction
course ||..o{ subscription
course ||..o{ content
content ||..o{ consumption
@enduml
